# TradingMonitorIBKR

./: .gitignore  .pylintrc  LICENSE  README.md  gui.py  main.py  portfolio_monitor.py  pyproject.toml
TradingMonitorIBKR.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
